fix(di): improve readability of preinitialized view

--- a/generators/add-app/templates/styles/di.scss
+++ b/generators/add-app/templates/styles/di.scss
@@ -1,3 +1,5 @@
 .app {
-	color: #000;
+	table {
+		color: #000;
+	}
 }
